# rtos_hal_stm32

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  bake.sh  debuging.sh  gcc-arm-none-eabi.cmake  local_actions.sh  setup_environment.sh
.github/workflows/: rtos-build.yml
base_example/: CMakeLists.txt  base_example.txt
base_example/inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
base_example/src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  syscalls.c  sysmem.c  system_stm32l4xx.c
meta-rtos/classes/: base.bbclass
meta-rtos/conf/: bitbake.conf  layer.conf
meta-rtos/recipes-core/mutex/: mutex_0.1.bb
meta-rtos/recipes-core/qsetandsemaphore/: qsetandsemaphore_0.1.bb
meta-rtos/recipes-core/queueisr/: queueisr_0.1.bb
meta-rtos/recipes-core/streambuffer/: streambuffer_0.1.bb
meta-rtos/recipes-core/taskcreate/: taskcreate_0.1.bb
meta-rtos/recipes-core/tasknotify/: tasknotify_0.1.bb
meta-rtos/recipes-core/timer/: timer_0.1.bb
patches/: kernel_control_task_notify.patch  notify_and_mutex.patch  qset_semaphore.patch  queue_isr.patch  stream_buffer.patch  task_create_and_control.patch  timer.patch
